<resources>
    <string name="app_name">Cards and pools</string>
    <string name="enter_name_of_card">Title</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="description_of_card">Description</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="load_image_from_gallery">Load image</string>
    <string name="reveal">Reveal</string>
    <string name="add_new_card">Add new card</string>
    <string name="show_all_cards">Cards</string>
    <string name="add_new_pool">Add new pool</string>
    <string name="show_all_pools">Pools</string>
    <string name="NeedTitle">Need title</string>
    <string name="NeedDescription">Need description</string>
    <string name="ImageIsEmpty">Set an image</string>
    <string name="CreateNewCard">Create new card</string>
    <string name="add_new_card_to_pool">Add new card to pool:</string>
    <string name="add_new_card_to_pool_btn">Add new cards</string>
    <string name="save_to_pool">Save to pool</string>
    <string name="choose_cards">Choose cards for your pool</string>
    <string name="image_of_pool">Image of pool(optional):</string>
    <string name="choose_picture">Choose picture</string>
    <string name="save_this_pool">Save this pool</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="EmptyListOfCard">Pls add some cards to your pool</string>
    <string name="cards_in_pool">Cards in pool:</string>
    <string name="needCards">Need cards</string>
    <string name="delete_card">Delete card</string>
    <string name="edit_card">Edit Card</string>
    <string name="Update">Update</string>
    <string name="delete_this_card">Delete this card?</string>
    <string name="yes">Yes</string>

    <string name="delete">Delete</string>
    <string name="rusure">Are you sure?</string>
    <string name="no">No</string>
    <string name="get_random_card_from_pool">Get random card from pool</string>
    <string name="deleted">Deleted</string>
    <string name="another_one">Another one</string>
    <string name="NeedUniqName">Need unique title</string>
    <string name="thisfiledoesntexist">This file does not exist</string>
    <string name="home">Home</string>
    <string name="Allpools">All pools</string>
    <string name="pool">Pool</string>
    <string name="card">Card</string>
    <string name="addnewcard">Add new card</string>
    <string name="allcards">All cards</string>
    <string name="addnewpool">Add new pool</string>
    <string name="long_tap_to_delete_card">(long tap to delete card)</string>
    <string name="galery_or_camera">Gallery or camera?</string>
    <string name="galery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="existOrNew">Add exist card or make new?</string>
    <string name="newCards">New cards</string>
    <string name="refresh">refresh</string>
    <string name="edit">Edit</string>
    <string name="refreshed">Refreshed</string>
    <string name="exist">Exist</string>
    <string name="makenewcard">Make new card</string>
    <string name="taptochoose">Tap on card to choose</string>
</resources>
