<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNewPool">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titlePool"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginEnd="10dp"
            />
        <EditText
            android:id="@+id/etPoolTitle"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_of_card"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleDescription"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginEnd="10dp"
            />
        <EditText
            android:id="@+id/etPoolDescription"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_of_card"/>

    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnForBtn"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_card_to_pool"
            android:layout_marginEnd="10dp"
            />


    </LinearLayout>

        <com.nex3z.flowlayout.FlowLayout
            android:id="@+id/flowLayoutBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flChildSpacingForLastRow="align"
            app:flRowSpacing="8dp"
            >

            <Button
                android:id="@+id/addNewCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:text="@string/add_new_card_to_pool_btn" />


        </com.nex3z.flowlayout.FlowLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>