<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".activities.CardViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:gravity="end"
            android:textColor="#000"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/titleCardTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:maxLines="1"
            android:textColor="#000"
            android:text="@string/lorem_ipsum"
            android:gravity="start"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description"
            android:gravity="end"
            android:textColor="#000"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            />

        <com.thecodeyard.ellipsizedtextview.EllipsizedTextView
            android:id="@+id/descriptionCardTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:onClick="extend"
            android:text="@string/lorem_ipsum"
            app:ellipsis="...continue"
            app:ellipsisColor="@color/colorAccent" />

    </LinearLayout>
    <ImageView
        android:id="@+id/imageViewInCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"/>



</LinearLayout>