<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PoolViewActivity">
<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/title"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/titlePoolView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/descriptionLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLL">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/description"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/descriptionPoolView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="#000" />
    </LinearLayout>



        <LinearLayout
            android:id="@+id/LLrecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/descriptionLL"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cards_in_pool"
                android:textColor="#000"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewInPoolViewActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewOfPoolView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            app:layout_constraintTop_toBottomOf="@id/LLrecyclerView"
            app:layout_constraintStart_toStartOf="parent"
            />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>